# LLaMA_fine-tuning

./: .env.template  .gitignore  README.md  pyproject.toml  setup_env.sh
app/: main.py
app/inference/: __init__.py  claude.py  dynamic_generator.py  local_llama.py  plan_generator.py
app/models/: inference.py
app/routers/: inference.py
